--- a/security-keycloak-authorization-quickstart/src/main/resources/application.properties
+++ b/security-keycloak-authorization-quickstart/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Configuration file
 %prod.quarkus.oidc.auth-server-url=https://localhost:8543/realms/quarkus
+quarkus.oidc.auth-server-url=https://localhost:8543/realms/quarkus
 quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
 quarkus.oidc.tls.verification=none
-quarkus.keycloak.devservices.realm-path=quarkus-realm.json
 quarkus.oidc.token.issuer=any
 
 # Enable Policy Enforcement
@@ -13,3 +13,18 @@ quarkus.keycloak.policy-enforcer.lazy-load-paths=false
 # Disables policy enforcement for a path
 quarkus.keycloak.policy-enforcer.paths.1.path=/api/public
 quarkus.keycloak.policy-enforcer.paths.1.enforcement-mode=DISABLED
+
+
+# devservices 配置
+# quarkus.keycloak.devservices.realm-path=quarkus-realm.json
+quarkus.keycloak.devservices.image-name=quay.io/keycloak/keycloak:latest
+# quarkus.keycloak.devservices.container-http-port=8543
+
+# hibernate
+quarkus.hibernate-orm.log.sql=true
+
+# Enable DISCRIMINATOR approach
+quarkus.hibernate-orm.multitenant=DISCRIMINATOR
+
+# use CamelCaseToUnderscoresNamingStrategy
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
